replace ctr with cbc and change password verify

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 # Logo/Icons
 android/app/src/main/res/drawable-*
 android/app/src/main/res/mipmap-*
-ios/Runner/Assets.xcassets/AppIcon.appiconset/
+ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-*
 
 
 # Miscellaneous
